--- a/src/Components/WebAssembly/testassets/StandaloneApp/Pages/Counter.razor
+++ b/src/Components/WebAssembly/testassets/StandaloneApp/Pages/Counter.razor
@@ -9,8 +9,10 @@
 @code {
     int currentCount = 0;
 
+    [Parameter] public int? IncrementAmount { get; set; }
+
     void IncrementCount()
     {
-        currentCount++;
+        currentCount += IncrementAmount.GetValueOrDefault(1);
     }
 }
